# Avena

./: .gitignore  LICENSE  README.md  docker-compose.yml  install.sh
cpp/: Dockerfile  main.cpp
go/: Dockerfile  gateway.go  go.mod  go.sum  main.go
proto/: discord_events.proto
python/: Dockerfile  main.py  requirements.txt
rust/: Cargo.toml  Dockerfile
rust/src/: main.rs
