[package]
name = "gateway-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
discord_ws = "0.1.0" # A lightweight Discord WebSocket library
nats = "0.28.0"
env_logger = "0.10.0"
log = "0.4.17"
async-trait = "0.1.59"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
